# avk

./: .gitignore  README.md
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/access_billing/: README.md  __init__.py  apps.py  models.py
backend/apps/access_billing/admin/: __init__.py
backend/apps/access_billing/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/access_billing/migrations/: __init__.py  (+1 more)
backend/apps/accounts/: README.md  __init__.py  apps.py  models.py
backend/apps/audit_core/: README.md  __init__.py  apps.py  models.py
backend/apps/common/: README.md  __init__.py  apps.py  models.py
backend/apps/content/: README.md  __init__.py  apps.py  models.py
backend/apps/content_moderation/: README.md  __init__.py  apps.py  models.py
backend/apps/institution_verification/: README.md  __init__.py  apps.py  models.py
backend/apps/institution_websites/: README.md  __init__.py  apps.py  models.py
backend/apps/institutions/: README.md  __init__.py  apps.py  models.py
backend/apps/notifications/: README.md  __init__.py  apps.py  models.py
backend/apps/reviews/: README.md  __init__.py  apps.py  models.py
backend/apps/staff_ops/: README.md  __init__.py  apps.py  models.py
backend/apps/support/: README.md  __init__.py  apps.py  models.py
backend/config/: __init__.py  asgi.py  celery_app.py  wsgi.py
backend/config/settings/: __init__.py  base.py  local.py  test.py
backend/config/urls/: __init__.py  api.py  internal.py
backend/tests/: __init__.py  test_system_endpoints.py
(+106 files in other folders)
